<resources>
    <string name="app_name">双录</string>
    <string name="load">正在加载中...</string>

    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络连接失败，请检查网络</string>
    <string name="socket_exception_error">网络连接失败，请检查网络</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="data_loading">加载中...</string>
    <string name="button_cancle">取消</string>
    <string name="button_confirm">确定</string>
    <!--登录界面-->
    <string name="login_user_name_hint">用户名</string>
    <string name="name_hint">请输入姓名</string>
    <string name="id_hint">请输入证件号码</string>
    <string name="mobile_hint">请输入手机号码</string>
    <string name="money_hint">请输入金额</string>
    <string name="note_hint">请输入备注</string>
    <string name="login_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="come_in">进入</string>
    <string name="off_line">离线</string>
    <string name="on_line">在线</string>
    <string name="login_offline">脱机</string>
    <string name="img_back">返回</string>
    <string name="title_home">标题栏文字</string>
    <string name="use_save">保存</string>
    <string name="video_record">录像记录</string>
    <string name="setting">设置</string>
    <string name="user_name">客户姓名:</string>
    <string name="card_type">证件类型:</string>
    <string name="card_num">证件号码:</string>
    <string name="user_mobile">用户手机:</string>
    <string name="choose_product">选择产品</string>
    <string name="choose_classify1">业务分类1</string>
    <string name="choose_classify2">业务分类2</string>
    <string name="img_next">下一步</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_setting">设置</string>

    <!-- 设置页面-->
    <string name="setting_ip">IP    </string>
    <string name="setting_port">端口</string>
    <string name="setting_node">节点</string>
    <string name="setting_node_hint">请输入节点</string>
    <string name="setting_port_hint">请输入端口</string>
    <string name="setting_ip_hint">请输入ip</string>
    <!--录像记录-->
    <string name="local_record">本地记录</string>
    <string name="up_record">上传队列</string>
    <string name="up_success">上传成功</string>
    <string name="up_now">正在上传</string>
    <string name="up_fill">上传失败</string>
    <string name="choose_all">全选</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="save_test">已占用800M,可用2.3G</string>
    <string name="data_count">共2条数据</string>
    <string name="record">记录</string>
    <string name="my">我的</string>
    <string name="user_name1">张伟</string>
    <string name="video_type">理财认</string>
    <string name="manage_type">非保本在</string>
    <string name="finish">完成</string>
    <string name="manage_name">智赢人生</string>
    <string name="manage_time">06/01 10:00</string>
    <string name="id_num">411522199103184321</string>
    <string name="img_description">图片说明</string>

    <string name="parameter_set">参数设置</string>
    <string name="off_data">离线数据</string>
    <string name="save_state">存储状态</string>
    <string name="save_location">存储位置</string>
    <string name="have_used">已用</string>
    <string name="have_lost">剩余</string>
    <string name="up_new">版本更新</string>
    <string name="about">关于</string>
    <string name="out_load">退出登录</string>
    <string name="save_lost">手机 剩余3G</string>
    <string name="edition">V1.2.1</string>
    <string name="star">*</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="product_info">产品信息</string>
    <string name="business_info">业务分类:</string>
    <string name="product_num">产品编号:</string>
    <string name="product_num3">产品编号:</string>
    <string name="thing_name">产品分类:</string>
    <string name="product_type">产品子类:</string>
    <string name="product_type_">产品类型:</string>
    <string name="buy_count">购买金额</string>
    <string name="buy_count_">购买金额:</string>
    <string name="product_num1">12345678</string>
    <string name="thing_name1">理财</string>
    <string name="product_type1">非保本</string>
    <string name="buy_count1">10000</string>
    <string name="note">备注</string>
    <string name="note_">备注:</string>
    <string name="note_content">这里有一个Android Studio的新的快捷功能，查看当前类中有哪些函数变量没被用到，哪些写法不合理。Eclipse没有的，很有用，下图中Inspect Code with Editor Settings就是是，你可以自己配置你所想用的快捷键</string>
    <string name="ring_num">环节一</string>
    <string name="play_video">播放视频</string>
    <string name="take_video">拍摄视频</string>
    <string name="video_radio">视频参数</string>
    <string name="record_right">拍摄凭证</string>
    <string name="ring_num2">环节二</string>
    <string name="record_video">录像</string>
    <string name="record_video_extra">录像额外信息</string>
    <string name="video_delete">删除</string>
    <string name="video_down">下载</string>
    <string name="video_up">上传</string>
    <string name="request_permission">拍照或录像需要这些权限，请确认开启</string>
    <string name="pixel_240">标清</string>
    <string name="pixel_480">480p</string>
    <string name="pixel_720">720p</string>

    <string name="video_low">流畅</string>
    <string name="video_normal">标清</string>
    <string name="video_high">高清</string>

    <!-- 产品-->
    <string name="product_name">产品名称:</string>
    <string name="product_code">产品编号</string>
    <string name="product_code_">产品编号：</string>
    <string name="business_type">业务编号</string>
    <string name="business_type_">业务编号：</string>
    <string name="product_type2">产品类型:</string>
    <string name="product_name_">产品名称:</string>
    <string name="common_hint">请输入</string>
    <string name="btn_search">搜索</string>
    <string name="video_name">12345678.avi</string>
    <string name="video_time">01:03:30</string>
    <string name="video_size">1.9M</string>
    <string name="wait_up">等待上传</string>
    <string name="wait_up1">凭证</string>
    <string name="pic_count">10张</string>
    <string name="re_up">重新上传</string>
    <string name="have_up">0</string>
    <string name="to_to">/</string>
    <string name="pic_total">0</string>
    <string name="product_search">搜索</string>
    <string name="search_hint">请输入产品名称或编号</string>
    <string name="offline_data">离线数据</string>
    <string name="product_number">12345678</string>
    <string name="downloading">正在下载</string>
    <string name="off_data1">数据列表</string>
    <string name="download_his">下载历史</string>
    <string name="file_path">选择文件</string>
    <string name="data_package">数据包1</string>
    <string name="lead_time">06/02 10:00</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">截止时间:</string>
    <string name="common_choose">请选择</string>
    <string name="error_text">视频文件缺失</string>
    <string name="about_no">未找到相关记录!</string>
    <string name="text_long">这是一个超长字符，用来测试布局显示，从前有座山，山上有座庙，庙里有座山，山上有座庙</string>
</resources>
