<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/activity_head_new" />

    <View style="@style/line_vertical" />

    <LinearLayout style="@style/apply_ll"
        android:id="@+id/layout_video_radio">

        <TextView
            style="@style/text_black_14_w"
            android:layout_marginStart="12dp"
            android:text="@string/video_radio" />

        <TextView
            android:id="@+id/txt_radio"
            style="@style/text_black_14_0_w"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:text="@string/video_normal" />

        <ImageView
            style="@style/img_next1"
            android:contentDescription="@string/img_description" />
    </LinearLayout>

    <View style="@style/line_vertical" />

</LinearLayout>
