<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/common_blue">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/img_go_back"
            android:contentDescription="@string/img_back"
            android:id="@+id/img_go_back" />
        <TextView
            android:id="@+id/txt_cancel"
            android:visibility="gone"
            style="@style/txt_choose"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            />
        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/offline_data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/setting"
            android:scaleType="centerInside"
            android:src="@drawable/icon_search_choose" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/record_local"
            style="@style/record_tab_item_tv"
            android:layout_gravity="center_horizontal"
            android:text="@string/off_data1"
            />
        <TextView
            android:id="@+id/record_suc"
            style="@style/record_tab_item_tv"
            android:layout_gravity="center_horizontal"
            android:text="@string/download_his"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:id="@+id/record_local_"
            android:background="@color/royalblue"
            style="@style/record_tab_item_vi"/>
        <View
            android:id="@+id/record_suc_"
            android:background="@color/transparent"
            style="@style/record_tab_item_vi"/>
    </LinearLayout>
    <View style="@style/line_vertical" />
    <FrameLayout
        android:id="@+id/record_tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
